--- a/Final_project/app/src/main/res/layout/activity_single_inspection.xml
+++ b/Final_project/app/src/main/res/layout/activity_single_inspection.xml
@@ -13,6 +13,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:text="@string/NameDateOfInspection"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,6 +24,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/NameInspType"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewDateN" />
 
@@ -33,6 +35,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/NameNumCritical"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewtypeN" />
 
@@ -43,6 +46,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/NameNumNonCritical"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewNumCriticalN" />
 
@@ -53,24 +57,28 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/NameHazard"
+        android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewNumNonCriN" />
 
     <ListView
         android:id="@+id/ListView"
-        android:layout_width="wrap_content"
-        android:layout_height="500dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="413dp"
+        android:layout_height="411dp"
+        android:layout_marginTop="180dp"
+        android:layout_marginBottom="12dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="142dp"
+        android:layout_marginStart="128dp"
         android:layout_marginTop="16dp"
         android:text="@string/DateOfInspection"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textViewDateN"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -78,9 +86,10 @@
         android:id="@+id/textViewType"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
+        android:layout_marginStart="152dp"
         android:layout_marginTop="8dp"
         android:text="@string/InspType"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textViewtypeN"
         app:layout_constraintTop_toBottomOf="@+id/textViewDate" />
 
@@ -88,9 +97,10 @@
         android:id="@+id/textViewNumCritical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="68dp"
         android:layout_marginTop="8dp"
         android:text="@string/NumCritical"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textViewNumCriticalN"
         app:layout_constraintTop_toBottomOf="@+id/textViewType" />
 
@@ -98,9 +108,10 @@
         android:id="@+id/textViewNumNonCr"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:text="@string/NumNonCritical"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textViewNumNonCriN"
         app:layout_constraintTop_toBottomOf="@+id/textViewNumCritical" />
 
@@ -108,11 +119,12 @@
         android:id="@+id/textViewHazardLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="156dp"
+        android:layout_marginStart="152dp"
         android:layout_marginTop="8dp"
         android:drawableLeft="@android:drawable/radiobutton_off_background"
         android:text="@string/Hazard"
         android:textColor="#FFC107"
+        android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textViewHazardLevelN"
         app:layout_constraintTop_toBottomOf="@+id/textViewNumNonCr" />
 </androidx.constraintlayout.widget.ConstraintLayout>
