--- a/Final_project/app/src/main/res/layout/activity_single_inspection.xml
+++ b/Final_project/app/src/main/res/layout/activity_single_inspection.xml
@@ -125,7 +125,7 @@
         android:text="@string/Hazard"
         android:textColor="#FFC107"
         android:textSize="18sp"
-        app:drawableTint="#F42E20"
+        app:drawableTint="#C6170B"
         app:layout_constraintStart_toEndOf="@+id/textViewHazardLevelN"
         app:layout_constraintTop_toBottomOf="@+id/textViewNumNonCr" />
 </androidx.constraintlayout.widget.ConstraintLayout>
