--- a/Final_project/app/src/main/res/layout/activity_single_restaurant.xml
+++ b/Final_project/app/src/main/res/layout/activity_single_restaurant.xml
@@ -12,18 +12,34 @@
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
+        app:popupTheme="@style/CustomPopupStyle"/>
+
+<!--    <android.support.v7.widget.Toolbar-->
+<!--        android:id="@+id/my_toolbar"-->
+<!--        style="@style/HeaderBar"-->
+<!--        android:layout_width="417dp"-->
+<!--        android:layout_height="65dp"-->
+<!--        android:layout_marginBottom="16dp"-->
+<!--        android:elevation="4dp"-->
+<!--        app:layout_constraintBottom_toTopOf="@+id/textView_Single_Restaurant_Name"-->
+<!--        app:layout_constraintStart_toStartOf="parent"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        app:popupTheme="@style/ActionBarPopupThemeOverlay"-->
+<!--        app:theme="@style/ActionBarThemeOverlay"-->
+<!--        tools:layout_editor_absoluteX="0dp" />-->
 
     <TextView
-        android:id="@+id/textView_Restaurant_Name"
-        android:layout_width="103dp"
-        android:layout_height="20dp"
+        android:id="@+id/textView_Single_Restaurant_Name"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginStart="48dp"
         android:layout_marginTop="80dp"
         android:layout_marginEnd="363dp"
+        android:text="@string/restaurantName"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.077"
         app:layout_constraintStart_toStartOf="parent"
@@ -31,40 +47,52 @@
 
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView_Single_Restaurant_Address"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="29dp"
         android:layout_marginTop="13dp"
         android:layout_marginEnd="112dp"
-        android:text="12808 King George Blvd, Surrey"
+        android:text="@string/restaurantAddress"
         android:textAlignment="textStart"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView_Restaurant_Name" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_Single_Restaurant_Name" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/textView_Single_Restaurant_latitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
         android:layout_marginTop="10dp"
-        android:text="49.20610961 "
+        android:text="@string/latitude"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_Single_Restaurant_Address" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/textView_Single_Restaurant_longitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="180dp"
+        android:layout_marginTop="176dp"
         android:layout_marginEnd="371dp"
+        android:text="@string/longitude"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.016"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_Single_Restaurant_inspection"
+        android:layout_width="412dp"
+        android:layout_height="500dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginBottom="1dp"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
