--- a/Final_project/app/src/main/res/layout/item_view.xml
+++ b/Final_project/app/src/main/res/layout/item_view.xml
@@ -15,12 +15,12 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="@string/restaurantName"
-            android:textSize="20sp" />
+            android:textSize="24sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_weight="2"
+            android:layout_weight="1.5"
             android:orientation="horizontal">
 
             <ImageView
@@ -44,23 +44,50 @@
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textSize="16sp" />
 
                 <TextView
                     android:id="@+id/textView6"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textSize="16sp" />
 
             </LinearLayout>
 
-            <ImageView
-                android:id="@+id/imageView2"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
-                android:layout_weight="1"
-                app:srcCompat="?android:attr/alertDialogIcon" />
+                android:layout_weight="1.5"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/hazardLevelIcon"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    app:srcCompat="?android:attr/alertDialogIcon" />
+
+                <TextView
+                    android:id="@+id/hazardLevelTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="TextView" />
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:text="TextView" />
+
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
