--- a/Final_project/app/src/main/res/layout/activity_single_inspection.xml
+++ b/Final_project/app/src/main/res/layout/activity_single_inspection.xml
@@ -63,13 +63,12 @@
 
     <ListView
         android:id="@+id/ListView"
-        android:layout_width="413dp"
-        android:layout_height="411dp"
-        android:layout_marginTop="180dp"
-        android:layout_marginBottom="12dp"
+        android:layout_width="400dp"
+        android:layout_height="357dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textViewDate"
@@ -125,7 +124,20 @@
         android:text="@string/Hazard"
         android:textColor="#459E48"
         android:textSize="18sp"
-        app:drawableTint="#C6170B"
+        app:drawableTint="#FF5722"
         app:layout_constraintStart_toEndOf="@+id/textViewHazardLevelN"
         app:layout_constraintTop_toBottomOf="@+id/textViewNumNonCr" />
+
+
+    <TextView
+        android:id="@+id/textViewViolationName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="24dp"
+        android:text="@string/ViolationName"
+        android:textColor="#000000"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewHazardLevelN" />
 </androidx.constraintlayout.widget.ConstraintLayout>
