--- a/Final_project/app/src/main/res/layout/activity_single_inspection.xml
+++ b/Final_project/app/src/main/res/layout/activity_single_inspection.xml
@@ -114,20 +114,19 @@
         app:layout_constraintStart_toEndOf="@+id/textViewNumNonCriN"
         app:layout_constraintTop_toBottomOf="@+id/textViewNumCritical" />
 
+
     <TextView
         android:id="@+id/textViewHazardLevel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="152dp"
         android:layout_marginTop="8dp"
-        android:drawableLeft="@android:drawable/radiobutton_off_background"
+        android:layout_marginEnd="16dp"
         android:text="@string/Hazard"
         android:textColor="#459E48"
         android:textSize="18sp"
         app:drawableTint="#FF5722"
-        app:layout_constraintStart_toEndOf="@+id/textViewHazardLevelN"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewNumNonCr" />
-
 
     <TextView
         android:id="@+id/textViewViolationName"
@@ -140,4 +139,13 @@
         android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewHazardLevelN" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="25dp"
+        android:layout_height="23dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintEnd_toStartOf="@+id/textViewHazardLevel"
+        app:layout_constraintTop_toBottomOf="@+id/textViewNumNonCriN"
+        app:srcCompat="@drawable/red_circle" />
 </androidx.constraintlayout.widget.ConstraintLayout>
