--- a/Final_project/app/src/main/res/layout/activity_single_restaurant.xml
+++ b/Final_project/app/src/main/res/layout/activity_single_restaurant.xml
@@ -65,10 +65,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="184dp"
-        android:layout_marginTop="204dp"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView_Single_Restaurant_latitude" />
 
     <TextView
         android:id="@+id/textView_Single_Restaurant_Long"
@@ -94,16 +93,17 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_Single_Restaurant_inspection"
-        android:layout_width="416dp"
-        android:layout_height="326dp"
+        android:layout_width="409dp"
+        android:layout_height="395dp"
         android:layout_marginStart="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_marginTop="12dp"
         android:scrollbars="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_Single_Restaurant_Lat"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
