--- a/Final_project/app/src/main/res/layout/inspection_item.xml
+++ b/Final_project/app/src/main/res/layout/inspection_item.xml
@@ -28,13 +28,14 @@
             android:textStyle="bold"
             android:layout_alignParentTop="true"
             android:layout_toEndOf="@+id/imageView_Single_Restaurant_hazard_icon"
-            android:layout_marginStart="13dp"/>
+            />
 
         <TextView
             android:id="@+id/textView_Single_Restaurant_NumOfCritical_Found"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="21sp"
+            android:layout_marginStart="8dp"
             android:layout_toEndOf="@+id/textView_Single_Restaurant_NumOfCritical" />
 
         <TextView
@@ -53,6 +54,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="21sp"
+            android:layout_marginStart="8dp"
             android:layout_below="@+id/textView_Single_Restaurant_NumOfCritical_Found"
             android:layout_toEndOf="@+id/textView_Single_Restaurant_NumOfNonCritical" />
 
@@ -73,6 +75,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="21sp"
+            android:layout_marginStart="8dp"
             android:layout_below="@+id/textView_Single_Restaurant_NumOfNonCritical"
             android:layout_toEndOf="@+id/textView_Single_Restaurant_Date" />
 
