--- a/Final_project/app/src/main/res/layout/activity_single_inspection.xml
+++ b/Final_project/app/src/main/res/layout/activity_single_inspection.xml
@@ -141,7 +141,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewHazardLevelN" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageViewHazardLevel"
         android:layout_width="25dp"
         android:layout_height="23dp"
         android:layout_marginTop="10dp"
