Fix problem, can work well

--- a/Final_project/app/src/main/res/layout/activity_single_inspection.xml
+++ b/Final_project/app/src/main/res/layout/activity_single_inspection.xml
@@ -68,7 +68,8 @@
         android:layout_marginStart="5dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" >
+    </ListView>
 
     <TextView
         android:id="@+id/textViewDate"
