--- a/Final_project/app/src/main/res/layout/activity_main.xml
+++ b/Final_project/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/background_color">
 
     <ListView
         android:id="@+id/restaurantListView"
@@ -15,12 +16,26 @@
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="10dp" />
 
-    <TextView
-        android:id="@+id/allRestaurantTextView"
-        android:layout_width="317dp"
-        android:layout_height="51dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-        android:text="@string/all_restaurantTextView"
-        android:textSize="24sp" />
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_single_restaurant"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/CustomPopupStyle"  />
+
+    <!--    <TextView-->
+<!--        android:id="@+id/allRestaurantTextView"-->
+<!--        android:layout_width="317dp"-->
+<!--        android:layout_height="51dp"-->
+<!--        android:layout_marginStart="20dp"-->
+<!--        android:layout_marginTop="20dp"-->
+<!--        android:text="@string/all_restaurantTextView"-->
+<!--        android:textSize="24sp"-->
+<!--        android:textColor="#fff"/>-->
 </RelativeLayout>
