--- a/Final_project/app/src/main/res/layout/activity_single_inspection.xml
+++ b/Final_project/app/src/main/res/layout/activity_single_inspection.xml
@@ -7,17 +7,6 @@
     tools:context=".SingleInspection">
 
     <TextView
-        android:id="@+id/textViewDateN"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:text="@string/NameDateOfInspection"
-        android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/textViewtypeN"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -63,8 +52,8 @@
 
     <ListView
         android:id="@+id/ListView"
-        android:layout_width="400dp"
-        android:layout_height="357dp"
+        android:layout_width="402dp"
+        android:layout_height="348dp"
         android:layout_marginStart="5dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -74,11 +63,22 @@
         android:id="@+id/textViewDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="132dp"
+        android:layout_marginTop="72dp"
         android:text="@string/DateOfInspection"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@+id/textViewDateN"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textViewDateN"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="12dp"
+        android:layout_marginTop="72dp"
+        android:text="@string/NameDateOfInspection"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
@@ -148,4 +148,18 @@
         app:layout_constraintEnd_toStartOf="@+id/textViewHazardLevel"
         app:layout_constraintTop_toBottomOf="@+id/textViewNumNonCriN"
         app:srcCompat="@drawable/red_circle" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar_single_restaurant"
+        android:layout_width="409dp"
+        android:layout_height="wrap_content"
+        android:background="?attr/colorPrimary"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:popupTheme="@style/CustomPopupStyle"  />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
