--- a/Final_project/app/src/main/res/layout/item_view.xml
+++ b/Final_project/app/src/main/res/layout/item_view.xml
@@ -15,7 +15,8 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:text="@string/restaurantName"
-            android:textSize="24sp" />
+            android:textSize="24sp"
+            android:textColor="#fff"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -47,7 +48,8 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:text="TextView"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:textColor="#fff"/>
 
                 <TextView
                     android:id="@+id/textView6"
@@ -55,7 +57,8 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:text="TextView"
-                    android:textSize="16sp" />
+                    android:textSize="16sp"
+                    android:textColor="#fff"/>
 
             </LinearLayout>
 
@@ -84,7 +87,8 @@
                         android:layout_height="match_parent"
                         android:layout_weight="2"
                         android:gravity="right"
-                        android:text="TextView" />
+                        android:text="TextView"
+                        android:textColor="#fff"/>
                 </LinearLayout>
 
                 <TextView
@@ -93,7 +97,8 @@
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="TextView" />
+                    android:text="TextView"
+                    android:textColor="#fff"/>
 
             </LinearLayout>
 
