--- a/Final_project/app/src/main/res/layout/activity_single_inspection.xml
+++ b/Final_project/app/src/main/res/layout/activity_single_inspection.xml
@@ -149,4 +149,15 @@
         app:layout_constraintEnd_toStartOf="@+id/textViewHazardLevel"
         app:layout_constraintTop_toBottomOf="@+id/textViewNumNonCriN"
         app:srcCompat="@drawable/red_circle" />
+
+    <TextView
+        android:id="@+id/textViewEmpty"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="120dp"
+        android:layout_marginBottom="200dp"
+        android:text="@string/emptyStatus"
+        android:textSize="30sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
