--- a/Final_project/app/src/main/res/layout/item_view.xml
+++ b/Final_project/app/src/main/res/layout/item_view.xml
@@ -25,8 +25,8 @@
 
             <ImageView
                 android:id="@+id/item_image"
-                android:layout_width="0dp"
                 android:layout_height="match_parent"
+                android:layout_width="0dp"
                 android:layout_marginTop="10dp"
                 android:layout_weight="1"
                 android:adjustViewBounds="true"
@@ -45,16 +45,17 @@
                     android:id="@+id/restaurantAddress"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:text="TextView"
+                    android:layout_weight="3"
+                    android:text="@string/restaurantAddressTextView"
                     android:textSize="16sp" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/numberOfIssuesTextView"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_gravity="bottom"
                     android:layout_weight="1"
-                    android:text="TextView"
+                    android:text="@string/numberOfIssuesFound"
                     android:textSize="16sp" />
 
             </LinearLayout>
@@ -84,16 +85,16 @@
                         android:layout_height="match_parent"
                         android:layout_weight="2"
                         android:gravity="right"
-                        android:text="TextView" />
+                        android:text="@string/hazardLevel" />
                 </LinearLayout>
 
                 <TextView
-                    android:id="@+id/textView2"
+                    android:id="@+id/lastDateInspectionTextView"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:text="TextView" />
+                    android:text="@string/lastDateInspection" />
 
             </LinearLayout>
 
