add all strings to strings.xml

--- a/Final_project/app/src/main/res/layout/single_violation.xml
+++ b/Final_project/app/src/main/res/layout/single_violation.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="5dp"
         android:layout_marginTop="16dp"
-        android:text="Food premises not maintained in a sanitary condition."
+        android:text="@string/food_premises_not_maintained_in_a_sanitary_condition"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageViewNature1" />
@@ -64,7 +64,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="17dp"
-        android:text="Not Critical"
+        android:text="@string/not_critical"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
