--- a/Final_project/app/src/main/res/layout/activity_main.xml
+++ b/Final_project/app/src/main/res/layout/activity_main.xml
@@ -9,12 +9,14 @@
 
     <ListView
         android:id="@+id/restaurantListView"
-        android:layout_width="357dp"
-        android:layout_height="591dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="0dp"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="10dp" />
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"
+        android:divider="@null"
+        android:dividerHeight="10dp"/>
 
     <!--    <TextView-->
 <!--        android:id="@+id/allRestaurantTextView"-->
