--- a/Final_project/app/src/main/res/layout/inspection_item.xml
+++ b/Final_project/app/src/main/res/layout/inspection_item.xml
@@ -4,7 +4,8 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="8dp"
-    app:cardCornerRadius="4dp">
+    app:cardCornerRadius="4dp"
+    >
 
     <RelativeLayout
         android:layout_width="match_parent"
