--- a/Final_project/app/src/main/res/layout/item_view.xml
+++ b/Final_project/app/src/main/res/layout/item_view.xml
@@ -1,112 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="130dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="8dp"
+    >
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
+
+
+        <ImageView
+            android:id="@+id/item_image"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="15dp"
+            android:padding="2.5dp" />
 
         <TextView
             android:id="@+id/restaurantName"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
+            android:layout_width="213dp"
+            android:textStyle="bold"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="11dp"
+            android:layout_marginTop="5dp"
+            android:layout_toEndOf="@+id/item_image"
             android:text="@string/restaurantName"
-            android:textSize="24sp"
-            android:textColor="#fff"/>
+            android:textSize="24sp" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="2.5"
-            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/restaurantAddress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/restaurantName"
+            android:layout_marginStart="11dp"
+            android:layout_toEndOf="@+id/item_image"
+            android:text="@string/restaurantAddressTextView"
+            android:textSize="16sp" />
 
-            <ImageView
-                android:id="@+id/item_image"
-                android:layout_height="match_parent"
-                android:layout_width="0dp"
-                android:layout_marginTop="10dp"
-                android:layout_weight="1"
-                android:adjustViewBounds="true"
-                android:gravity="left"
-                android:maxWidth="80dp"
-                android:maxHeight="80dp"
-                app:srcCompat="@drawable/bar2" />
+        <TextView
+            android:id="@+id/numberOfIssuesTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/restaurantAddress"
+            android:layout_marginStart="11dp"
+            android:layout_toEndOf="@+id/item_image"
+            android:text="@string/numberOfIssuesFound"
+            android:textSize="16sp" />
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="2.5"
-                android:orientation="vertical">
+        <ImageView
+            android:id="@+id/hazardLevelIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            app:srcCompat="?android:attr/alertDialogIcon" />
 
-                <TextView
-                    android:id="@+id/restaurantAddress"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="3"
-                    android:text="@string/restaurantAddressTextView"
-                    android:textSize="16sp"
-                    android:textColor="#fff"/>
+        <TextView
+            android:id="@+id/hazardLevelTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/hazardLevelIcon"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="7dp"
+            android:layout_marginEnd="20dp"
+            android:text="@string/hazardLevel" />
 
-                <TextView
-                    android:id="@+id/numberOfIssuesTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_gravity="bottom"
-                    android:layout_weight="1"
-                    android:text="@string/numberOfIssuesFound"
-                    android:textSize="16sp"
-                    android:textColor="#fff"/>
+        <TextView
+            android:id="@+id/lastDateInspectionTextView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
 
+            android:layout_below="@+id/numberOfIssuesTextView"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="82dp"
+            android:layout_marginEnd="17dp"
+            android:layout_marginBottom="5dp"
+            android:text="@string/lastDateInspection" />
 
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1.5"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:orientation="horizontal">
-
-                    <ImageView
-                        android:id="@+id/hazardLevelIcon"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="1"
-                        app:srcCompat="?android:attr/alertDialogIcon" />
-
-                    <TextView
-                        android:id="@+id/hazardLevelTextView"
-                        android:layout_width="0dp"
-                        android:layout_height="match_parent"
-                        android:layout_weight="2"
-                        android:gravity="right"
-                        android:text="@string/hazardLevel"
-                        android:textColor="#fff"/>
-
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/lastDateInspectionTextView"
-                    android:layout_width="match_parent"
-                    android:layout_height="0dp"
-                    android:layout_weight="1"
-                    android:gravity="right"
-                    android:text="@string/lastDateInspection"
-                    android:textColor="#fff"/>
+    </RelativeLayout>
 
 
-            </LinearLayout>
-
-        </LinearLayout>
-    </LinearLayout>
-
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
