--- a/Final_project/app/src/main/res/layout/activity_pop_up_dowload.xml
+++ b/Final_project/app/src/main/res/layout/activity_pop_up_dowload.xml
@@ -4,50 +4,54 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background_popup"
+    android:background="@drawable/background_popup"
+    tools:context=".UI.UpdateDataActivity"
     >
 
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="117dp"
-        android:layout_height="106dp"
-        android:layout_marginTop="72dp"
-        android:tint="#fff"
-        android:contentDescription="@string/image_download"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:srcCompat="@android:drawable/stat_sys_download" />
 
     <Button
         android:id="@+id/button_update_popup"
         android:layout_width="152dp"
         android:layout_height="54dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/background_button_dowload"
         android:text="@string/update_popup"
         android:textColor="#fff"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.742" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="117dp"
+        android:layout_height="106dp"
+        android:layout_marginBottom="15dp"
+        android:contentDescription="@string/image_download"
+        android:tint="#fff"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.215"
+        app:srcCompat="@android:drawable/stat_sys_download" />
 
     <Button
         android:id="@+id/button_cancel_popup"
         android:layout_width="152dp"
         android:layout_height="54dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/background_button_cancel"
 
+        android:background="@drawable/background_button_cancel"
         android:text="@string/ignore_popup"
         android:textColor="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_update_popup"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.881" />
 
     <TextView
         android:id="@+id/textView"
@@ -61,5 +65,5 @@
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.112" />
+        app:layout_constraintVertical_bias="0.059" />
 </androidx.constraintlayout.widget.ConstraintLayout>
