Almost done with favorite part

--- a/Final_project/app/src/main/res/layout/activity_new_inspection.xml
+++ b/Final_project/app/src/main/res/layout/activity_new_inspection.xml
@@ -8,8 +8,12 @@
     tools:context=".UI.NewInspectionActivity">
 
     <ListView
-        android:layout_width="409dp"
-        android:layout_height="601dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="1dp" />
+        android:id="@+id/newInspectionListView"
+        android:layout_width="373dp"
+        android:layout_height="525dp"
+        android:dividerHeight="13dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
