--- a/Final_project/app/src/main/res/layout/new_inspection_item.xml
+++ b/Final_project/app/src/main/res/layout/new_inspection_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginBottom="8dp"
-    app:cardCornerRadius="4dp"
+    app:cardCornerRadius="8dp"
     >
 
     <RelativeLayout
@@ -13,7 +13,7 @@
 
         <ImageView
             android:id="@+id/imageView_New_Inspection_hazard_icon"
-            android:layout_width="60dp"
+            android:layout_width="73dp"
             android:layout_height="60dp"
             android:layout_marginStart="4.5dp"
             android:layout_marginTop="4.5dp"
@@ -21,49 +21,52 @@
             android:padding="2.5dp" />
 
         <TextView
+            android:id="@+id/text_view_hazard_New_Inspection"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/imageView_New_Inspection_hazard_icon"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="14dp"
+            android:text="@string/hazardLevel"
+            android:textSize="17sp" />
+
+        <TextView
             android:id="@+id/textView_New_Inspection_ResName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@+id/imageView_New_Inspection_hazard_icon"
             android:text="@string/restaurant_name"
             android:textSize="21sp"
-            android:textStyle="bold"
-            android:layout_alignParentTop="true"
-            android:layout_toEndOf="@+id/imageView_New_Inspection_hazard_icon"
-            android:layout_marginStart="13dp"
-            />
+            android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/textView_Single_Restaurant_NumOfNonCritical"
+            android:id="@+id/textView_New_Inspection_Date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@+id/textView_New_Inspection_ResName"
+            android:layout_marginStart="29dp"
+            android:layout_marginTop="10dp"
+            android:layout_toEndOf="@+id/imageView_New_Inspection_hazard_icon"
             android:text="@string/DateOfInspection"
             android:textSize="21sp"
-            android:textStyle="bold"
-            android:layout_below="@+id/textView_New_Inspection_ResName"
-            android:layout_toEndOf="@+id/imageView_New_Inspection_hazard_icon"
-            android:layout_marginStart="13dp"/>
+            android:textStyle="bold" />
 
+        <ImageView
+            android:id="@+id/imageViewFavouriteNewInspection"
+            android:layout_width="73dp"
+            android:layout_height="40dp"
 
-        <TextView
-            android:id="@+id/textView_Single_Restaurant_Date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="21sp"
-            android:textStyle="bold"
-            android:layout_below="@+id/textView_Single_Restaurant_NumOfNonCritical"
-            android:layout_marginStart="13dp"
-            android:layout_toEndOf="@+id/imageView_New_Inspection_hazard_icon"
-            android:text="@string/last_inspection"
-            />
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="77dp"
+            android:layout_marginTop="45dp"
+            android:layout_marginEnd="27dp"
+            android:layout_toEndOf="@+id/textView_New_Inspection_Date"
+            app:srcCompat="@android:drawable/btn_star_big_on" />
 
-        <TextView
-            android:id="@+id/textView_Single_Restaurant_Date_Found"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="21sp"
-            android:layout_marginStart="8dp"
-            android:layout_below="@+id/textView_Single_Restaurant_NumOfNonCritical"
-            android:layout_toEndOf="@+id/textView_Single_Restaurant_Date" />
 
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
