Done favorite part

--- a/Final_project/app/src/main/res/layout/new_inspection_item.xml
+++ b/Final_project/app/src/main/res/layout/new_inspection_item.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="110dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginBottom="8dp"
     app:cardCornerRadius="8dp"
     >
 
@@ -26,7 +25,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/imageView_New_Inspection_hazard_icon"
             android:layout_alignParentStart="true"
-            android:layout_marginStart="32dp"
+            android:layout_marginStart="22dp"
             android:layout_marginTop="14dp"
             android:text="@string/hazardLevel"
             android:textSize="17sp" />
